# roguelike

./: .gitignore  COMMANDS.md  Cargo.toml  KEYBINDS.md  dialogue  dialogue_index_meanings.txt  index  mapgentest.bash  run  run_script
src/: board.rs  commands.rs  consts.rs  default_settings.txt  dialogue.rs  enemy.rs  events.rs  generator.rs  input.rs  items.rs  limbs.rs  main.rs  math.rs  player.rs  random.rs  settings.rs  spell.rs  stat_help.txt  state.rs  stats.rs  style.rs  upgrades.rs  vector.rs
src/board/: axis_length.rs  map_gen.rs  room.rs  tile.rs
src/enemy/: dummy.rs
src/pieces/: door.rs  enemy.rs  exit.rs  item.rs  mod.rs  spell.rs  upgrade.rs  wall.rs
