[package]
name = "roguelike"
version = "0.1.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "console"
path = "src/bin/console.rs"

[dependencies]
abes_nice_things = { git = "https://github.com/Course-Brains/abes_nice_things.git", rev = "6b27382", features = ["dyn_binary"] }
crossterm = "0.29.0"

[features]
log = []

[profile.release-with-debug]
inherits="release"
debug = true
