[package]
name = "roguelike"
version = "0.2.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
abes_nice_things = { git = "https://github.com/Course-Brains/abes_nice_things.git", rev = "316b602", features = ["dyn_binary"] }
anyhow = "1.0"

[features]

[profile.release-with-debug]
inherits="release"
debug = true
